Diffie–Hellman key exchange

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
     - Pseudorandomness: pseudo-random
     - Stream Cipher: stream-cipher
     - Block Cipher: block-cipher
+    - Diffie–Hellman key exchange: Diffie_Hellman-key-exchange
     - About: about.md
 
 
