--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,8 +8,9 @@ nav:
     - Pseudorandomness: pseudo-random
     - Stream Cipher: stream-cipher
     - Block Cipher: block-cipher
-    - Diffie–Hellman key exchange: Diffie_Hellman-key-exchange
-    - Public Key Encryption Systems: RSA
+    - Diffie–Hellman Key Exchange: Diffie_Hellman-key-exchange
+    - Public Key Infrastructure: RSA
+    - Hash Function: hash
     - About: about.md
 
 
