--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
         - Overview: digital-signature/index.md
         - RSA Sign/Verify with Python: digital-signature/rsa-signature-python.md
         - RSA Sign/Verify with OpenSSL: digital-signature/rsa-signature-openssl.md
+    - Message Authentication Codes(MAC): mac
     - About: about.md
 
 
