--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,9 +20,9 @@ nav:
         - RSA Sign/Verify with Python: digital-signature/rsa-signature-python.md
         - RSA Sign/Verify with OpenSSL: digital-signature/rsa-signature-openssl.md
     - Message Authentication Codes(MAC): mac
-    - Digital Certificates: digital-certificates
-    - SSL,TLS and HTTPS:
-        - Overview: ssl-tls-https/index.md
+    - Digital Certificates:
+        - Overview: digital-certificates/index.md
+        - Openssl Self-Sign Certificates: digital-certificates/openssl-self-sign.md
     - About: about.md
 
 
